--- a/Example/web3swiftBrowser/Podfile
+++ b/Example/web3swiftBrowser/Podfile
@@ -2,5 +2,5 @@ platform :ios, '12.0'
 
 target 'web3swiftBrowser' do
   use_frameworks!
-   pod 'web3swift', :path => '../../'
+   pod 'Torus-web3swift', :path => '../../'
 end
